version 2.0
-----------
 - refactored codebase into pngquant and standalone libimagequant
 - reduced memory usage by further 30% (and more for very large images)

version 1.8
-----------
 - min/max quality option (number of colors is automatically adjusted for desired quality level)
 - switched option parsing to getopt_long (syntax such as -s1 and --ext=ext is supported)
 - significantly improved performance thanks to custom partial sorting
 - optional Cocoa (Mac OS X) image reader for color profile support
 - reduced memory usage by 20%
 - remapping improved for very low number of colors

version 1.7
-----------
 - new, accurate RGBA color similarity algorithm
 - change of optional SSE3 code to SSE2 that is always enabled on x86-64
 - optional OpenMP-based parallelisation of remapping
 - changed long options to use double hyphen (-force to --force) [thanks to Jari Aalto]

version 1.6
-----------
 - novel dithering algorithm that doesn't add noise unless necessary
 - perceptual weighting of colors taking into account edges and noise
 - much faster remapping
 - improved portability, makefiles and man page

version 1.5
-----------
 - palettes postprocessed with Voronoi iteration
 - better RGBA color similarity algorithm and Floyd-Steinberg remapping
 - SSE optimisations

version 1.4
-----------
 - median cut is applied many times in a feedback loop
 - speed/quality trade-off option
 - faster remap of transparent areas

version 1.3
-----------
 - significant changes to the algorithm: use of variance
   to find largest dimensioin and to split most varying boxes
 - use of premultiplied alpha for color blending
 - conversion of output to gamma 2.2

version 1.2
-----------
 - color computation done in floating point
 - gamma correction applied
 - dropped support for very old systems & compilers

version 1.1
-----------
 - alpha-sensitive color reduction and dithering
 - support -- and - arguments in command line
 - number of colors optional (defaults to 256)